# task-cli

./: .gitignore  README.md  cheatsheet.md  pyproject.toml
src/task_cli/: clipboard.py  config.py  main.py  models.py  nlp_dates.py  repository.py  service.py  utils.py
tests/: test_cli.py
