[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-cli"
version = "0.1.0"
description = "A minimal but clean CLI Task Manager"
authors = [
    { name = "User" }
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "pyperclip>=1.8.2"
]

[project.scripts]
task = "task_cli.main:app"
t = "task_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/task_cli"]
